<resources>
    <string name="app_name">Edu-Info360</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
<string name="text1">

-<![CDATA[The National Educational Testing Bureau of University Grants Commission (UGC) conducts National Eligibility Test (NET) to determine eligibility for lectureship and for award of Junior Research Fellowship (JRF) for Indian nationals in order to ensure minimum standards for the entrants in the teaching profession and research. The Test is conducted in Humanities (including languages), Social Sciences, Forensic Science, Environmental Sciences, Computer Science and Applications and Electronic Science. The Council of Scientific and Industrial Research (CSIR) conducts the UGC-CSIR NET for other Science subjects, namely, Life Sciences, Physical Sciences, Chemical Sciences, Mathematical Sciences and Earth Atmospheric Ocean & Planetary Sciences jointly with the UGC. The tests are conducted twice in a year generally in the months of June and December. For candidates who desire to pursue research, the Junior Research Fellowship (JRF) is available for five years subject to fulfillment of certain conditions. UGC has allocated a number of fellowships to the universities for the candidates who qualify the test for JRF. The JRFs are awarded to the meritorious candidates from among the candidates qualifiying for eligibility for lectureship in the NET. JRFs are available only to the candidates who opt for it in their application forms. The test for Junior Research Fellowship is being conducted since 1984. The Government of India, through its notification dated 22nd July, 1988 entrusted the task of conducting the eligibility test for lectureship to UGC. Consequently, UGC conducted the first National Eligibility Test, common to both eligibility for Lectureship and Junior Research Fellowship in two parts, that is, in December 1989 and in March , 1990.]]>
</string>
    <string name="text2">UGC conducts NET twice a year, i.e., in the months of June and December. The notifications announcing the June and December examinations are published in the months of March and September respectively in the weekly journal of nation-wide circulation, viz, Employment News.</string>
    <string name="text3">The result of June, UGC-NET is declared generally in the month of October. Similarly December, UGC-NET result is usually declared in the month of April. The UGC-NET results published in the Employment News are also available on UGC website.</string>
<string name="text4">

-<![CDATA[The NET in Major Science Subjects, viz., Chemical Sciences; Earth Atmospheric Ocean & Planetary Sciences; Life Sciences; Mathematical Sciences and Physical Sciences is conducted jointly with the Council of Scientific and Industrial Research (CSIR), New Delhi. The concerned notifications are issued separately by CSIR.]]>
</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Choose a category</string>
    <string-array name="user_category">
        <item>Select a category</item>
        <item>Student</item>
        <item>Institute</item>
        <item>Teacher</item>
    </string-array>
    <string name="libraryServices">Library Services</string>
    <string name="downHU">Download Hindi Unicode</string>
    <string name="DELNET">DELNET</string>
    <string name="INDEST">INDEST</string>
    <string name="INDEST2">Institutes Under INDEST-AICTE Consortium</string>
    <string name="IET">IET Digital Library</string>
    <string name="INFLIBNET">INFLIBNET</string>
    <string name="NPTEL">NPTEL</string>
    <string name="projectFactory">Project Factory</string>
    <string name="authorWorkshop">IEEE Author Workshops Registration</string>
    <string name="instID">Get Institute ID</string>
    <string name="studID">Get Student ID</string>
    <string name="createProfile">Create Student Profile</string>
    <string name="upload">Upload Project</string>
    <string name="download">Download Project</string>
    <string name="help">Help File for Project Factory</string>
    <string name="publish">How to publish a Technical Paper</string>
    <string name="vocEdu">Vocational Education</string>
    <string name="vocEduText"> Vocational education or Vocational Education and Training (VET), also called Career and Technical Education (CTE), prepares learners for jobs that are based in manual or practical activities, traditionally non-academic and totally related to a specific trade, occupation or vocation, hence the term, in which the learner participates. It is sometimes referred to as technical education, as the learner directly develops expertise in a particular group of techniques or technology. Generally, vocation and career are used interchangeably. Vocational education might be classified as teaching procedural knowledge. This may be contrasted with declarative knowledge, as used in education in a usually broader scientific field, which might concentrate on theory and abstract conceptual knowledge, characteristic of tertiary education.\n\n Vocational education can be at the secondary or post-secondary level and can interact with the apprenticeship system. Increasingly, vocational education can be recognised in terms of recognition of prior learning and partial academic credit towards tertiary education (e.g., at a university) as credit; however, it is rarely considered in its own form to fall under the traditional definition of a higher education.\n\n Up until the end of the twentieth century, vocational education focused on specific trades such as for example, an automobile mechanic or welder, and was therefore associated with the activities of lower social classes. As a consequence, it attracted a level of stigma. Vocational education is related to the age-old apprenticeship system of learning.\n\n However, as the labor market becomes more specialized and economies demand higher levels of skill, governments and businesses are increasingly investing in the future of vocational education through publicly funded training organizations and subsidized apprenticeship or traineeship initiatives for businesses. At the post-secondary level vocational education is typically provided by an institute of technology, or by a local community college.\n\n </string>
    <string name="notify">NVEQF Notification MHRD GOI </string>
    <string name="vocImpLink">Important Links of Vocational Education </string>
    <string name="curriculum1">Model Curriculum, Framework and Content under NVEQF</string>
    <string name="curriculum2">Model Curriculum, Framework and Content bridging Modular Employability Skills of Ministry of Labour and Employment under NVEQF</string>
    <string name="approvalProcess">Approval Process Handbook 2013-2014 for Vocational Education and Community Colleges</string>
    <string name="approvedInst">List of Approved Institutions and SKPs</string>
    <string name="NEEM">Registration for NEEM agents</string>
    <string name="dbt">Direct Benifit Transfer (DBT)</string>
    <string name="dbt1">1.DBT for AICTE Approved Institutions</string>
    <string name="dbt2">2.DBT for University Departments and Constituent Colleges</string>
    <string name="pgScholarship">PG Scholarship GATE/GPAT/DBT</string>
    <string name="textStudPG"> Process for Students to Register on the portal with GATE Score and Bank Account details </string>
    <string name="actionsStud">• Actions to be taken by Students and Institutes</string>
    <string name="reqStud">• System Requirements for Students</string>
    <string name="instructStud">• Instructions for Students</string>
    <string name="step1">• Step1 \: Get Institute Id</string>
    <string name="step2">• Step2 \: Get PG Student ID</string>
    <string name="step3">• Step3 \: PG Scholarship GATE/GPAT</string>
    <string name="notifyDBT2">Notification Regarding GATE/GPAT Scholarships</string>
    <string name="eSARTS">e-Scholarship-Fellowship Award Registration Tracking System</string>
    <string name="sf1">1. Emeritus Fellowship</string>
    <string name="sf2"> 2. Dr. S. Radharkrishnan Post Doctoral Fellowship In Humanities And Social Sciences </string>
    <string name="sf3"> 3. Post Doctoral Fellowship to Women Candidates </string>
    <string name="sf4"> 4. Post Doctoral Fellowship to SC/ST Candidates </string>
    <string name="sf5"> 5. Swami Vivekananda Single Girl Child Scholarship for Research in Social Sciences </string>
    <string name="sf6"> 6. Rajiv Gandhi National Fellowship for SC Candidate </string>
    <string name="sf7"> 7. National Fellowship for Higher Education of ST Students </string>
    <string name="sf8"> 8. National Fellowship for Persons with Disabilities </string>
    <string name="sf9"> 9. Maulana Azad National Fellowship For Minority Students </string>
    <string name="sf10"> 10. National Fellowship for OBC Candidate </string>
    <string name="headScholarship">Scholarships</string>
    <string name="vidyaLaxmi">Vidya Laxmi Portal</string>
    <string name="general"> General Scholarships </string>
    <string name="DST"> DST Scholarships and Awards </string>
    <string name="disable"> Scholarships for Students with Special Abilities </string>
    <string name="sriLanka"> Sri Lanka Presidential Scholarships for PG Education </string>
    <string name="antirag">F.No.37-3/Legal/AICTE/2009 – In exercise of the powers conferred under Section 23 read with Section 10 (b), (g), (p) and (q) of AICTE Act, 1987, the All India Council for Technical Education, hereby makes the following Regulations:-</string>
<string name="antirag2">These Regulations may be called the All India Council for Technical Education (Prevention and Prohibition of Ragging in Technical Institutions, Universities including Deemed to be Universities imparting technical education) Regulations 2009
        They shall come into force on the date of the notification.</string>
    <string name="list1">NVEQF list of AICTE approved Institutes</string>
    <string name="list2">NVEQF list of Other approved Institutes</string>
    <string name="list3">NVEQF list of approved Skill Knowledge Providers (SKP)</string>
    <string name="NEEM1">Registration for NEEM agents</string>
    <string name="NEEM2">Help file for NEEM Registration</string>
    <string name="NEEM3">NEEM Agents Approved by AICTE</string>
    <string name="facdevlink1">• Schedule of Orientation Programmes and Refresher Courses for Teachers to be Conducted by UGC-Academic Staff Colleges (UGC-ASCs) during 2011-2012. </string>
    <string name="facdevlink2">• Refresher Course </string>
    <string name="facdevlink3">• UGC Supported Orientation Programmes and Refresher Courses for Teachers to be Conducted By UGC Academic Staff Colleges (UGC ASCs) and UGC-Refresher Course Centres (UGC RCCs) During 2009 to 2010. </string>
    <string name="facdevlink4">• Statement showing the orientation progarmmes,Principals Workshops and Referesher Courses recommended by the Expert Committee for Academic Staff Colleges for the Year 2009-2010. </string>
    <string name="facdev2">• Besides, the UGC has also identified as many as 5 universities/institutions to organise and conduct refresher courses for faculty members in their chosen areas of specialization during 2008-2009.</string>
    <string name="facdev1">• The University Grants Commission has been making proactive efforts to upgrade the knowledge and skills of faculty members in the institutions of higher education. For the purpose of organising orientation and refresher courses for in service faculty members, the UGC has established and funds a network of 66 Academic Staff Colleges across the country.</string>
</resources>