<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/vocEdu"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/vocEduText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:text="@string/vocEduText"/>
            <TextView
                android:id="@+id/notify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:layout_marginLeft="40dp"
                android:textColor="@color/aqua"
                android:text="@string/notify"/>
            <TextView
                android:id="@+id/vocImpLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:onClick="sendMessage"
                android:layout_marginLeft="40dp"
                android:clickable="true"
                android:textColor="@color/aqua"
                android:text="@string/vocImpLink"/>
            <TextView
                android:id="@+id/curriculum1"
                android:onClick="sendMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:clickable="true"
                android:textColor="@color/aqua"
                android:text="@string/curriculum1"/>
            <TextView
                android:id="@+id/curriculum2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/aqua"
                android:layout_marginLeft="40dp"
                android:clickable="true"
                android:text="@string/curriculum2"/>
            <TextView
                android:id="@+id/approvalProcess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/aqua"
                android:layout_marginLeft="40dp"
                android:clickable="true"
                android:text="@string/approvalProcess" />
            <TextView
                android:id="@+id/approvedInst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:textColor="@color/subhead"
                android:text="@string/approvedInst"/>
            <TextView
                android:id="@+id/list1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/aqua"
                android:clickable="true"
                android:text="@string/list1"/>
            <TextView
                android:id="@+id/list2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/aqua"
                android:clickable="true"
                android:text="@string/list2"/>
            <TextView
                android:id="@+id/list3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/aqua"
                android:clickable="true"
                android:text="@string/list3"/>

            <TextView
                android:id="@+id/NEEM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:textColor="@color/subhead"
                android:text="@string/NEEM"/>
            <TextView
                android:id="@+id/NEEM1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/aqua"
                android:clickable="true"
                android:text="@string/NEEM1"/>
            <TextView
                android:id="@+id/NEEM2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/aqua"
                android:clickable="true"
                android:text="@string/NEEM2"/>
            <TextView
                android:id="@+id/NEEM3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/aqua"
                android:clickable="true"
                android:text="@string/NEEM3"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>