<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/dbt"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/dbt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/subhead"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/dbt1"/>
            <TextView
                android:text="@string/pgScholarship"
                android:layout_width="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:textSize="20sp"

                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textStudPG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/colorBlack"
                android:text="@string/textStudPG"/>
            <TextView
                android:id="@+id/actionStud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/aqua"
                android:layout_marginLeft="50dp"
                android:clickable="true"
                android:text="@string/actionsStud"/>
            <TextView
                android:id="@+id/reqStud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/aqua"
                android:layout_marginLeft="50dp"
                android:clickable="true"
                android:text="@string/reqStud"/>
            <TextView
            android:id="@+id/instructStud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/aqua"
            android:layout_marginLeft="50dp"
            android:clickable="true"
            android:text="@string/instructStud"/>
            <TextView
                android:id="@+id/step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/aqua"
                android:layout_marginLeft="50dp"
                android:clickable="true"
                android:text="@string/step1"/>
            <TextView
                android:id="@+id/step2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="50dp"
                android:clickable="true"
                android:text="@string/step2"/>
            <TextView
                android:id="@+id/step3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="50dp"
                android:clickable="true"
                android:text="@string/step3"/>


            <TextView
                android:id="@+id/dbt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/subhead"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/dbt2"/>
                    <TextView
                        android:id="@+id/notifyDBT2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/aqua"
                        android:layout_marginLeft="50dp"
                        android:clickable="true"
                        android:text="@string/notifyDBT2"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>