<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/headScholarship"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/vidyaLaxmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:layout_marginLeft="40dp"
            android:textColor="@color/aqua"
            android:text="@string/vidyaLaxmi"/>
        <TextView
            android:id="@+id/eSARTS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:clickable="true"
            android:textColor="@color/aqua"
            android:text="@string/eSARTS"/>
        <TextView
            android:onClick="sendMessage"
            android:id="@+id/general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:clickable="true"
            android:textColor="@color/aqua"
            android:text="@string/general"/>
        <TextView
            android:id="@+id/DST"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/aqua"
            android:layout_marginLeft="40dp"
            android:clickable="true"
            android:text="@string/DST"/>
        <TextView
            android:id="@+id/dbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/aqua"
            android:layout_marginLeft="40dp"
            android:clickable="true"
            android:text="@string/dbt" />
        <TextView
            android:id="@+id/disable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/aqua"
            android:clickable="true"
            android:text="@string/disable"/>
        <TextView
            android:id="@+id/sriLanka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/aqua"
            android:clickable="true"
            android:text="@string/sriLanka"/>
    </LinearLayout>

</LinearLayout>