<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#626200"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="About NET"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text1"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#626200"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="NET Schedule"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text2"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#626200"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="N E T Results Declaration Schedule"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text3"
        android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#626200"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="N E T for Science Subjects"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text4"
            android:layout_marginTop="20dp" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>